@startuml
'https://plantuml.com/class-diagram

class DisplayModel {
    menu
    playList
    mainWindow
    controllerItem
    favoriteList
}

abstract class DisplayModelBuilder {
    DisplayModel displayModel;
    buildMenu()
    buildPlayList()
    buildMainWindow()
    buildControllerItem()
    buildFavoriteList()
    boolean isBuildMenu()
    boolean isBuildPlayList()
    boolean isBuildFavoriteList()
    DisplayModel createDisplayModel()
}

class FullDisplayModelBuilder extends DisplayModelBuilder{
    buildMenu()
    buildPlayList()
    buildMainWindow()
    buildControllerItem()
    buildFavoriteList()
}

class SimpleDisplayModelBuilder extends DisplayModelBuilder{
    buildMenu()
    buildPlayList()
    buildMainWindow()
    buildControllerItem()
    buildFavoriteList()
    boolean isBuildMenu()
    boolean isBuildPlayList()
    boolean isBuildFavoriteList()
}

class MemoryDisplayModelBuilder extends DisplayModelBuilder{
    buildMenu()
    buildPlayList()
    buildMainWindow()
    buildControllerItem()
    buildFavoriteList()
    boolean isBuildMenu()
    boolean isBuildPlayList()
}

class DisplayModelDirector {
    DisplayModelBuilder displayModelBuilder
    DisplayModel construct(DisplayModelBuilder displayModelBuilder)
}

DisplayModel <.. DisplayModelDirector
DisplayModelBuilder <-- DisplayModelDirector
DisplayModel <-- DisplayModelBuilder
@enduml